hphp/hack/test/typecheck/function_pointer/explicit_targs2.php.exp
File "explicit_targs2.php", line 8, characters 25-25:
Generic type parameter `T` must be specified explicitly (Typing[4347])
File "explicit_targs2.php", line 3, characters 42-42:
Definition is here
